# dlink-dchs150-hass

./: .bumpversion.toml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dch-wifi.py  hacs.json  info.md  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/workflows/: constraints.txt  labeler.yml  tests.yaml  tests.yaml.old
custom_components/dchs150_motion/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  dch_wifi.py  entity.py  hass_integration.py  manifest.json  strings.json
custom_components/dchs150_motion/translations/: en.json
docs/: api.rst  index.rst
run_scripts/: start_module.sh
scripts/: develop
src/custom_components/dchs150_motion/: __init__.py  api.py  const.py  dch_wifi.py  entity.py  hass_integration.py  manifest.json  strings.json
src/custom_components/dchs150_motion/translations/: en.json
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_sensor.py  test_switch.py
utils/: __init__.py  dch_wifi_init.py  develop
